fix swagger annotation for refresh
