# docs/swagger.yaml
@@ -11,11 +11,34 @@ definitions:
       access:
         example: eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NTE5MDUzMDQsInN1YiI6ImZiNjJhYTgxLTExNzItNGM3My04ZmMzLWNkNWE0NDYzNDZiYSJ9.SZHR-VexEcSNwe1GbmiG0p8lQVMTLH9MOIWV2N3I4ZMXEtYWF4Zcm4SKeaGFND7JCZ858VmId1WgPXKxTzF_iA
         type: string
+      refresh_cookie:
+        description: Это поле только для swagger и имеет значение только в dev моде.
+        example: refreshToken=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzZXNzaW9uX2lkIjoiZDdhOTk2YjctOWZlNi00YjRlLWI4NWItODM3YzAyN2RmNDU3Iiwic3ViIjoiZmI2MmFhODEtMTE3Mi00YzczLThmYzMtY2Q1YTQ0NjM0NmJhIiwiZXhwIjoxNzUzNjE4MzUxfQ.SdTNSloBSOnxHJeq6FWlN3UuiyZBOzL9P5OQVp23Wlg;
+          Path=/; Max-Age=86400; HttpOnly; SameSite=Lax
+        type: string
+    type: object
+  handlers.errAuthResp:
+    properties:
+      message:
+        example: error authorization
+        type: string
+      success:
+        example: false
+        type: boolean
     type: object
   handlers.errBadRequestResp:
     properties:
       message:
         example: 'create session: error: uncorrect uuid'
+        type: string
+      success:
+        example: false
+        type: boolean
+    type: object
+  handlers.errEmptyAuthHeaderResp:
+    properties:
+      message:
+        example: error empty auth header
         type: string
       success:
         example: false
@@ -125,10 +148,10 @@ paths:
               type: string
           schema:
             $ref: '#/definitions/handlers.TokenResponse'
-        "400":
-          description: Bad Request
+        "401":
+          description: Unauthorized
           schema:
-            $ref: '#/definitions/handlers.errBadRequestResp'
+            $ref: '#/definitions/handlers.errEmptyAuthHeaderResp'
         "500":
           description: Internal Server Error
           schema:
